{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 58,
  "lineage": "68c19289-3223-254a-e8f3-e9bb1495528a",
  "resources": [
    {
      "module": "module.mig_autoscaler",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-05T09:17:09.527-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-hadassah-gottfried/global/firewalls/prodallow-health-checks",
            "log_config": [],
            "name": "prodallow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-hadassah-gottfried/global/networks/default",
            "priority": 1000,
            "project": "terraform-hadassah-gottfried",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-hadassah-gottfried/global/firewalls/prodallow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "health-check-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.mig_autoscaler",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2025-02-05T09:17:09.526-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-hadassah-gottfried/global/firewalls/proddeny-all-inbound",
            "log_config": [],
            "name": "proddeny-all-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-hadassah-gottfried/global/networks/default",
            "priority": 65535,
            "project": "terraform-hadassah-gottfried",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-hadassah-gottfried/global/firewalls/proddeny-all-inbound",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "health-check-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}